infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: jwmicroservices/posts # Docker image
---
# CLUSTER IP SERVICE (For posts pod) BELOW
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: ClusterIP # Is not necessary, by default type is ClusterIP
  selector:
    app: posts # Service for all app posts named pods.
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # Service PORT.
      targetPort: 4000 # POD (Docker image) PORT.
