infra/k8s/posts-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts # Service for all app POST named pods.
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # Service PORT.
      targetPort: 4000 # POD (Docker image) PORT.
